DHUB-1050: update unit test coverage of `backend/postgres`